syntax = "proto3";
package computer.v1;
option go_package= "github.com/fineman999/TIL/GRPC/buf/buf-test/proto/computer/v1;computer";
import "computer/v1/laptop_message.proto";
import "computer/v1/filter_message.proto";
message CreateLaptopRequest {
    Laptop laptop = 1;
}

message CreateLaptopResponse {
    string id = 1;
}

message SearchLaptopRequest {
    Filter filter = 1;
}

message SearchLaptopResponse {
    Laptop laptop = 1;
}

message UploadImageRequest {
    oneof data {
        ImageInfo info = 1;
        bytes chunk_data = 2;
    }
}

message ImageInfo {
    string laptop_id = 1;
    string image_type = 2;
}

message UploadImageResponse {
    string id = 1;
    uint32 size = 2;
}

message RateLaptopRequest {
    string laptop_id = 1;
    double score = 2;
}

message RateLaptopResponse {
    string laptop_id = 1;
    uint32 count = 2;
    double average_score = 3;
}


service LaptopService {
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse);
    rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse);
    rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse);
    rpc RateLaptop(stream RateLaptopRequest) returns (stream RateLaptopResponse);
}